--- a/src/Components/CountdownTimer/Countdowntimer.css
+++ b/src/Components/CountdownTimer/Countdowntimer.css
@@ -1,17 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Overpass&display=swap');
+
+h1 {
+    display: flex;
+    justify-content: center;
+}
 
 .sign {
     display: flex;
     justify-content: center;
-    align-items: center;
     background: linear-gradient(270deg, #054217, #0e3911);
     color: #ffffff;
     text-shadow: 1px 1px 2px;
     border-radius: 15px;
-    border: 2px solid silver;
+    border: 2px solid #9c9c9c;
     box-shadow: 0 0 5px 5px;
     padding: 2vw;
     flex-direction: column;
+    font-family: 'Overpass', sans-serif;
 }
 
 .number-text {
@@ -19,21 +24,17 @@
 }
 
 .countdown-timer span {
-    margin-left: 2px;
-    margin-right: 2px;
+    margin: 2px;
     font-size: 5vw;
 }
 
 .timer-boxes {
-    flex-direction: column;
-    margin: 5px;
-}
-
-.colon {
-    align-self: flex-start;
+    margin: 10px;
+    align-items: baseline;
 }
 
 .countdown-timer {
     display: flex;
     align-self: flex-start;
+    align-items: baseline;
 }
